HTML and Flask escape html angle brackets

--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -19,16 +19,16 @@ layout: html
     <h2>Writing the Code</h2>
     <p>Our code will look as follows: </p>
     <pre><code class="language-html">
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello</title>
-    </head>
-    <body>
-        <h1>Welcome To My Website!</h1>
-        <p>Hello World!</p>
-    </body>
-</html>
+&lt;!DOCTYPE html>
+&lt;html>
+    &lt;head>
+        &lt;title>Hello&lt;/title>
+    &lt;head>
+    &lt;body>
+        &lt;h1>Welcome To My Website!&lt;/h1>
+        &lt;p>Hello World!&lt;/p>
+    &lt;/body>
+&lt;/html>
     </code></pre>
     <p>Copy it and put it in Sublime Text: </p>
     <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text">
