--- a/programming/python/flask/your-first-flask-website.html
+++ b/programming/python/flask/your-first-flask-website.html
@@ -9,18 +9,18 @@ layout: flask
 <section>
     <h2>Writing the Code</h2>
     <p>The code will be as follows: </p>
-    <pre>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello</title>
-    </head>
-    <body>
-        <h1>Welcome To My Website!</h1>
-        <p>Hello World!</p>
-    </body>
-</html>
-  </pre>
+    <pre><code class="language-html">
+&lt;!DOCTYPE html>
+&lt;html>
+  &lt;head>
+    &lt;title>Hello&lt;/title>
+  &lt;head>
+  &lt;body>
+    &lt;h1>Welcome To My Website!&lt;/h1>
+    &lt;p>Hello World!&lt;/p>
+  &lt;/body>
+&lt;/html>
+    </code></pre>
 </section>
 
 <section>
