--- a/programming/javascript/index.html
+++ b/programming/javascript/index.html
@@ -15,7 +15,7 @@ layout: javascript
 
 <section>
     <h2>How can I run JavaScript?</h2>
-    <p>It's just like CSS. You can directly put JavaScript code in your HTML files or create a new file and reference it from your HTML. You can run JavaScript directly, but that's more advanced and we won't be covering it in this course.</p>
+    <p>It's just like <a href="/programming/css/">CSS</a>. You can directly put JavaScript code in your HTML files or create a new file and reference it from your HTML. You can run JavaScript directly, but that's more advanced and we won't be covering it in this course.</p>
 </section>
 
 <section>
