--- a/programming/python/flask/templating.html
+++ b/programming/python/flask/templating.html
@@ -13,7 +13,7 @@ permalink: /programming/python/flask/templating/
 
 <section>
     <h2>Making Templates in Flask</h2>
-    <p>To make a template in Flask, you will first need to create a <i>directory</i>, or folder, named <code>templates</code>. You can write your HTML code in your <code>templates</code> folder. For this tutorial, we will create our Home Page using a template.</p>
+    <p>To make a template in Flask, you will first need to create a folder, named <code>templates</code>. You can write your HTML code in your <code>templates</code> folder. For this tutorial, we will create our Home Page using a template.</p>
     <p>First, let's make a file called <code>index.html</code>. We will write <a href="/programming/html/">HTML</a> code in there. If you are unfamiliar with HTML but want to learn it, then check out our <a href="/programming/html/">HTML</a> tutorial. But, now, copy the following code into your HTML file:</p>
     <pre><code class="language-html">
 &lt;!DOCTYPE html>
@@ -27,9 +27,14 @@ permalink: /programming/python/flask/templating/
   &lt;/body>
 &lt;/html>
     </code></pre>
-    <p>If you don't understand the code, you can view the code explanation <a href="/programming/html/your-first-html-website/">here</a></p>
+    <p>If you don't understand the code, you can view the code explanation <a href="/programming/html/your-first-html-website/">here</a>.</p>
 </section>
 
 <section>
-    <h2>Running Python in Templates</h2>
+  <h2>Displaying Templates</h2>
+  <p></p>
+</section>
+
+<section>
+    <h2>Putting Python in Templates</h2>
 </section>
