Finish Tkinter code breakdown

--- a/programming/python/tkinter/your-first-tkinter-program.html
+++ b/programming/python/tkinter/your-first-tkinter-program.html
@@ -24,4 +24,6 @@ window.mainloop()
 <section>
     <h2>Code Breakdown</h2>
     <p><code>import tkinter as tk</code> tells Python to import Tkinter. We don't want to type the seven characters <code>tkinter</code> whenever we want to do something, so we import Tkinter as if its name was <code>tk</code>.</p>
+    <p><code>window = tk.Tk()</code> tells Tkinter to make a window object, which represents the main window of the program.</p>
+    <p><code>window.mainloop()</code> tells Tkinter to run a loop so that whenever the user does something, like click a button, Tkinter can respond.</p>
 </section>
