--- a/programming/python/tkinter/your-first-tkinter-program.html
+++ b/programming/python/tkinter/your-first-tkinter-program.html
@@ -18,7 +18,8 @@ window.mainloop()
 
 <section>
     <h2>Running the Code</h2>
-    <p>Run the code as you would run any other Python program.</p>
+    <p>Run the code as you would run any other Python program. After running it, you should see a totally empty window like this: </p>
+    <img src="/images/programming/python/tkinter/empty-window.png" alt="An empty Tkinter window">
 </section>
 
 <section>
