--- a/programming/javascript/setup-javascript.html
+++ b/programming/javascript/setup-javascript.html
@@ -13,7 +13,7 @@ layout: javascript
 </section>
 
 <section>
-    <h2>Linking Our JavaScript Code Into HTML</h2>
+    <h2>Linking Our JavaScript Code In HTML</h2>
     <p>There are two main ways to run JavaScript in a browser, and they both involve linking our having the JavaScript code in your <a href="/programming/html/">HTML</a> file.</p>
     <p>The first option is putting your JavaScript code between two <code>&#60;script&#62;</code> tags. For example, we could have </p>
     <pre><code class="language-html">
