--- a/programming/javascript/setup-javascript.html
+++ b/programming/javascript/setup-javascript.html
@@ -27,5 +27,5 @@ alert("Hello World!")
 &#60;script src="location/to/javascript/code.js"&#62;&#60;/script&#62;
     </code></pre>
     <p>and by using this way, it i easy to organiza your JavaScript code into different chunks based on what they do! The main file name for the main JavaScript file that all or most pages on your site need is usually <code>script.js</code>.</p>
-    <p>Obviously, it is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="blablahblah.js"</code> method!</p>
+    <p>Obviously, it is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="script.js"</code> method!</p>
 </section>
