Add quick little sentence

--- a/programming/python/tkinter/your-first-tkinter-program.html
+++ b/programming/python/tkinter/your-first-tkinter-program.html
@@ -20,6 +20,7 @@ window.mainloop()
     <h2>Running the Code</h2>
     <p>Run the code as you would run any other Python program. After running it, you should see a totally empty window like this: </p>
     <img src="/images/programming/python/tkinter/empty-window.webp" alt="An empty Tkinter window">
+    <p>As you can see, Tkinter windows look different depending on the operating system.</p>
 </section>
 
 <section>
