--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -13,6 +13,7 @@ layout: default
                     <li><a href="/programming/python/flask/">Flask</a></li>
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
                     <li><a href="/programming/python/tkinter/">Tkinter</a></li>
+                    <li><a href="/programming/python/bottle/">Bottle</a></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
