--- a/programming/python/bottle/your-first-bottle-program.html
+++ b/programming/python/bottle/your-first-bottle-program.html
@@ -1,6 +1,10 @@
+---
+layout: bottle
+title: Your First Bottle Program
+permalink: /programming/python/bottle/your-firs-bottle-program/
+---
 
-
-
+<h1>Your First Bottle Program</h1>
 <section>
     <h2>Writing the Code</h2>
     <p>Below is the code we will write: </p>
