bottle intro edits

--- a/programming/python/bottle/index.html
+++ b/programming/python/bottle/index.html
@@ -8,9 +8,8 @@ permalink: /programming/python/bottle/
 
 <section>
     <h2>What is Bottle?</h2>
-    <p>Bottle is a super lightweight microframework for creating web applications with Python. It's super easy to get started. It, however, doesn't have a lot of bigger functions like <a href="/programming/python/django/">Django</a> so it is more recommended for beginners.</p>
+    <p>Bottle is a super lightweight microframework for creating web applications with Python. In fact, Bottle has no dependencies outside of the Python standard library. It's super easy to get started. However, Flask, unlike something like <a href="/programming/python/django/">Django</a>, does not have features like authentication built in.</p>
     <p>Bottle is a <em>backend web framework</em> which means that Bottle runs the code behind the scenes. Backend means that Bottle handles all the user requests and the code on the server.</p>
-    <p>Fun fact! Did you know that Bottle doesn't have any dependencies other than the Python standard library? It's true!!</p>
     <img src="/images/programming/python/bottle/bottle-logo.png" alt="Bottle Logo">
 </section>
 
