use <strong> instead of <b>

--- a/programming/javascript/jquery/index.html
+++ b/programming/javascript/jquery/index.html
@@ -19,7 +19,7 @@ layout: jquery
 
 <section>
     <h2>Why use jQuery?</h2>
-    <p>jQuery is, by far, the most popular library with websites using it more often than <a href="/programming/javascript/react/">React</a>, <a href="/programming/javascript/angular/">Angular</a>, and <a href="/programming/javascript/vue/">Vue</a> <b>COMBINED</b>! Some developers do argue that jQuery is dying in popularity but, in fact, more and more websites daily get created using jQuery and if jQuery was to be deleted from the programming world, then <u>TONS</u> of websites would fail to work.</p>
+    <p>jQuery is, by far, the most popular library with websites using it more often than <a href="/programming/javascript/react/">React</a>, <a href="/programming/javascript/angular/">Angular</a>, and <a href="/programming/javascript/vue/">Vue</a> <strong>COMBINED</strong>! Some developers do argue that jQuery is dying in popularity but, in fact, more and more websites daily get created using jQuery and if jQuery was to be deleted from the programming world, then <u>TONS</u> of websites would fail to work.</p>
 </section>
 
 <section>
