--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -5,7 +5,7 @@ layout: html
 ---
 
 <h1>Your First HTML Website</h1>
-<p>Now, it's time tot get our hands dirty and write some real code and open it in the web browser.</p>
+<p>Now, it's time to get our hands dirty and write some real code and open it in the web browser.</p>
 
 <section>
     <h2>Environment Setup</h2>
