--- a/programming/javascript/jquery/index.html
+++ b/programming/javascript/jquery/index.html
@@ -8,7 +8,7 @@ layout: jquery
 
 <section>
     <h2>What is jQuery?</h2>
-    <p>jQuery is a <a href="/programming/javascript/">JavaScript</a> "write less do more" library designed to simplify JavaScript coding through simple methods and HTML DOM manipulation, event handling, CSS animations, and handling AJAX code.</p>
+    <p>jQuery is a <a href="/programming/javascript/">JavaScript</a> "write less do more" library designed to simplify JavaScript coding through simple methods and HTML DOM manipulation, event handling, CSS animations, and handling AJAX requests.</p>
     <img src="/images/programming/javascript/jquery/jquery-logo.png" alt="jQuery Logo">
 </section>
 
