--- a/programming/html/headings.html
+++ b/programming/html/headings.html
@@ -5,3 +5,11 @@ layout: html
 ---
 
 <h1>HTML Headings</h1>
+
+<p>Headings are text that is larger than the rest. HTML has 6 heading elements, each one smaller than the last: </p>
+<h1>&lt;h1></h1>
+<h2>&lt;h2></h2>
+<h3>&lt;h3></h3>
+<h4>&lt;h4></h4>
+<h5>&lt;h5></h1>
+<h6>&lt;h6></h6>
