--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -31,7 +31,7 @@ layout: html
 &lt;/html>
     </code></pre>
     <p>Copy it and put it in Sublime Text: </p>
-    <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text">
+    <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text" style="height:50%;width:50%;">
     <p>Then, hit the <kbd>Ctrl</kbd> and <kbd>S</kbd> keys at the same time. You should see the following window pop up: </p>
     <img src="/images/programming/python/sublime-text-2.png" alt="The Sublime Text Save window">
     <p>Navigate to the folder where you want your HTML file to be and enter a name for the file. It's important that it ends in ".html". If you don't end in that way, your browser won't display the code as HTML code.</p>
