--- a/programming/javascript/setup-javascript.html
+++ b/programming/javascript/setup-javascript.html
@@ -22,10 +22,10 @@ alert("Hello World!")
 &#60;/script&#62;
     </code></pre>
     <p>in our code. We just simply embedded our JavaScript code into the HTML file. This is the first main way to write JavaScript code, but it isn't very widely used because it can be hard to find your code.</p>
-    <p>The second and more preferable option is writing your JavaScript code in an external <code>.js</code> file, which is usually in the same <i>directory</i>, or folder, as the <code>index.html</code> file. Then, we can simply reference the JavaScript file by writing</p>
+    <p>The second and more preferable option is writing your JavaScript code in an external <code>.js</code> file, which is usually in the same <i>directory</i>, or folder, as the <code>index.html</code> file. Then, we can simply reference the JavaScript file by typing: </p>
     <pre><code class="language-html">
 &#60;script src="path/to/javascript/filename.js"&#62;&#60;/script&#62;
     </code></pre>
-    <p>and by using this way, it i easy to organiza your JavaScript code into different chunks based on what they do! The main file name for the main JavaScript file that all or most pages on your site need is usually <code>script.js</code>.</p>
-    <p>Obviously, it is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="script.js"</code> method!</p>
+    <p>A benefit of the above method is that we can make edits easier and make our JavaScript code more organized. Using this method, we can also organize our JavaScript into different files.</p>
+    <p>Obviously, it is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="script.js"</code> method.</p>
 </section>
