--- a/programming/javascript/setup-javascript.html
+++ b/programming/javascript/setup-javascript.html
@@ -27,5 +27,5 @@ alert("Hello World!")
 &#60;script src="path/to/javascript/filename.js"&#62;&#60;/script&#62;
     </code></pre>
     <p>A benefit of the above method is that we can make edits easier and make our JavaScript code more organized. Using this method, we can also organize our JavaScript into different files.</p>
-    <p>Obviously, it is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="script.js"</code> method.</p>
+    <p>It is up to you for what method you choose, but in this JavaScript course, we will use the second method, or the <code>src="script.js"</code> method.</p>
 </section>
