--- a/programming/javascript/jquery/setup-jquery.html
+++ b/programming/javascript/jquery/setup-jquery.html
@@ -12,7 +12,7 @@ layout: jquery
     <pre><code class="language-html">
 &#60;script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"&#62;&#60;/script&#62;
     </code></pre>
-    <p>To your <code>head</code> tag. So, your head might look like this:</p>
+    <p>to your <code>head</code> tag. So, your head might look like this:</p>
     <pre><code class="language-html">
 &#60;head&#62;
 &#60;script src="script.js"&#62;&#60;/script&#62
