js console expand

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -10,3 +10,12 @@ layout: javascript
     <h2>What is the Console?</h2>
     <p>The console is basically a terminal for JavaScript in the web browser.</p>
 </section>
+
+<section>
+    <h2>Opening the Console</h2>
+    <p>It depends on the web browser. On Google Chrome, right click, select "Inspect Element" and switch to the "Console" tab. Then, you should see the console.</p>
+</section>
+
+<section>
+    <h2>Printing to the Console</h2>
+</section>
