--- a/programming/javascript/jquery/setup-jquery.html
+++ b/programming/javascript/jquery/setup-jquery.html
@@ -15,11 +15,11 @@ layout: jquery
     <p>to your <code>head</code> tag. So, your head might look like this:</p>
     <pre><code class="language-html">
 &#60;head&#62;
-&#60;script src="script.js"&#62;&#60;/script&#62
 &#60;script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"&#62;&#60;/script&#62
+&#60;script src="script.js"&#62;&#60;/script&#62
 &#60;/head&#62;
     </code></pre>
-    <small><i class="fas fa-exclamation-circle"></i> If your script are <b>NOT</b> in your head, than you <u>MUST</u> put the jQuery script tag before the regular <code>script.js</code> tag, or your code will work. Ignore this if your JavaScript scripts are in your head.</small>
+    <small><i class="fas fa-exclamation-circle"></i> In HTML, the order of your scripts <u>MATTER</u>!!! So, you <b>MUST</b> place the jQuery script before your <code>script.js</code> script or your code WON'T work!!!</small>
     <p>Now, you are ready to write your jQuery code!</p>
 </section>
 
