--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -18,4 +18,6 @@ layout: javascript
 
 <section>
     <h2>Printing to the Console</h2>
+    <p>To print to the console, we use the <code>console.log()</code> function. As an example, go to any web page and open the console. In your console, type <code>console.log("Hello World!")</code>. You should something like the following (again, depends on web browser): </p>
+    <img src="/images/programming/javascript/console-hello-world.png" alt="Hello World! in the console">
 </section>
