js console small addition

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -8,7 +8,7 @@ layout: javascript
 
 <section>
     <h2>What is the Console?</h2>
-    <p>The console is basically a terminal for JavaScript in the web browser.</p>
+    <p>The console is basically a terminal for JavaScript in the web browser. We can also use the console as an interactive place to interact and experiment with JavaScript.</p>
 </section>
 
 <section>
@@ -20,4 +20,5 @@ layout: javascript
     <h2>Printing to the Console</h2>
     <p>To print to the console, we use the <code>console.log()</code> function. As an example, go to any web page and open the console. In your console, type <code>console.log("Hello World!")</code>. You should something like the following (again, depends on web browser): </p>
     <img src="/images/programming/javascript/console-hello-world.png" alt="Hello World! in the console">
+    <p>Of course, we can also use <code>console.log()</code> in our JavaScript script files.</p>
 </section>
