--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -34,7 +34,7 @@ layout: html
     <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text" style="height:50%;width:50%;">
     <p>Then, hit the <kbd>Ctrl</kbd> and <kbd>S</kbd> keys at the same time. You should see the following window pop up: </p>
     <img src="/images/programming/python/sublime-text-2.png" alt="The Sublime Text Save window">
-    <p>Navigate to the folder where you want your HTML file to be and enter a name for the file. It's important that it ends in "<code>.html</code>". If you don't end in that way, your browser won't display the code as HTML code and your computer will not treat the file as an HTML file.</p>
+    <p>Navigate to the folder where you want to store your HTML file and enter a name for the file. It's important that it ends in "<code>.html</code>". If you don't end in that way, your browser won't display the code as HTML code and your computer will not treat the file as an HTML file.</p>
     <p>After you have saved your file, right click and select "Copy File Path". Then, paste (<kbd>Ctrl+V</kbd>) what you have just copied into your web browser's address bar. Then, you should see the following: </p>
     <div style="font-family: serif">
         <h1>Welcome To My Website!</h1>
