js making an alert

--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -13,4 +13,10 @@ layout: javascript
 
 <section>
     <h2>Making an Alert</h2>
+    <p>To make alerts, we use the <code>window.alert()</code> function. You can run it from the console or a JavaScript file. For example, type the following code: </p>
+    <pre><code class="language-javascript">
+window.alert("Hello World!")
+    </code></pre>
+    <p>You should see: </p>
+    <img src="/images/programming/javascript/alert-example.png" alt="An example of a JavaScript alert">
 </section>
