--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -20,7 +20,7 @@ layout: javascript
     <h2>Printing to the Console</h2>
     <p>To print to the console, we use the <code>console.log()</code> function. As an example, go to any web page and open the console. In your console, type <code>console.log("Hello World!")</code>. You should something like the following (again, depends on web browser): </p>
     <img src="/images/programming/javascript/console-hello-world.png" alt="Hello World! in the console" style="height:75px">
-    <p>Of course, we can also use <code>console.log()</code> in our JavaScript script files. As an example, type the following into your <code>script.js</code> file: </p>
+    <p>Of course, we can also use <code>console.log()</code> in our JavaScript code files. As an example, type the following into your <code>script.js</code> file: </p>
     <pre><code class="language-javascript">
 console.log("Running console.log from script.js")
     </code></pre>
