js alerts expand

--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -17,6 +17,12 @@ layout: javascript
     <pre><code class="language-javascript">
 window.alert("Hello World!")
     </code></pre>
-    <p>You should see: </p>
-    <img src="/images/programming/javascript/alert-example.png" alt="An example of a JavaScript alert">
+    <p>You should see something like: </p>
+    <img src="/images/programming/javascript/alert-example-1.png" alt="An example of a JavaScript alert">
+    <p>We can also use the <code>alert()</code> function instead of <code>window.alert()</code> to achieve the same thing. For example, type: </p>
+    <pre><code class="language-javascript">
+alert("Using the alert() function")
+    </code></pre>
+    <p>You should see something like: </p>
+    <img src="/images/programming/javascript/alert-example-2.png" alt="Using the alert() function in JavaScript">
 </section>
