--- a/programming/javascript/jquery/selecting-elements.html
+++ b/programming/javascript/jquery/selecting-elements.html
@@ -27,6 +27,7 @@ $(document).ready(function(){
 <section>
     <h2>Code Result</h2>
     <p>After running your code, you will find a simple HTML page. Don't worry about the CSS, it doesn't matter. Well, the page looks bare, but if you click on one of the lines of text (ignore the cursor shape), then it disappears!</p>
+    <img src="/images/programming/javascript/jquery/display-none-1.png" alt="Code Result With Inspect" style="height:100px;">
 </section>
 
 <section>
