--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -8,7 +8,7 @@ layout: javascript
 
 <section>
     <h2>What is an Alert?</h2>
-    <p>In JavaScript, an alert is a little message box on the webpage. Alerts are great for testing JavaScript code since you do need to go to the console, but alerts should generally be avoided when in a production environment.</p>
+    <p>In JavaScript, an alert is a little message box on the webpage. Alerts are great for testing JavaScript code since you do need to go to the console, but alerts should generally not be overused because the web page cannot be used until the alert is closed.</p>
 </section>
 
 <section>
