js comfirmation alert barebones + remove stuff about window.alert()

--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -13,16 +13,15 @@ layout: javascript
 
 <section>
     <h2>Making an Alert</h2>
-    <p>To make alerts, we use the <code>window.alert()</code> function. You can run it from the console or a JavaScript file. For example, type the following code: </p>
+    <p>To make alerts, we use the <code>alert()</code> function. You can run it from the console or a JavaScript file. For example, type the following code: </p>
     <pre><code class="language-javascript">
-window.alert("Hello World!")
+alert("Hello World!")
     </code></pre>
     <p>You should see something like: </p>
-    <img src="/images/programming/javascript/alert-example-1.png" alt="An example of a JavaScript alert" style="height:125px">
-    <p>We can also use the <code>alert()</code> function instead of <code>window.alert()</code> to achieve the same thing. For example, type: </p>
-    <pre><code class="language-javascript">
-alert("Using the alert() function")
-    </code></pre>
-    <p>You should see something like: </p>
-    <img src="/images/programming/javascript/alert-example-2.png" alt="Using the alert() function in JavaScript" style="height:125px">
+    <img src="/images/programming/javascript/alert-example.png" alt="An example of a JavaScript alert" style="height:125px">
+</section>
+
+<section>
+    <h2>Making a Confirmation Alert</h2>
+    <p>In JavaScript, we also have the <code>confirm()</code>. <code>confirm()</code> creates an alert box but with two buttons: OK and Cancel. If the user clicks OK, the function returns <code>true</code>. If the user clicks Cancel, the function returns <code>false</code>.</p>
 </section>
