js confirmation alerts expand

--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -24,4 +24,12 @@ alert("Hello World!")
 <section>
     <h2>Making a Confirmation Alert</h2>
     <p>In JavaScript, we also have the <code>confirm()</code>. <code>confirm()</code> creates an alert box but with two buttons: OK and Cancel. If the user clicks OK, the function returns <code>true</code>. If the user clicks Cancel, the function returns <code>false</code>.</p>
+    <p>As an example, type the following code: </p>
+    <pre><code class="language-javascript">
+console.log(confirm("Are you sure you want to do this?"))
+    </code></pre>
+    <p>When you run it, you should see something like this: </p>
+    <img src="/images/programming/javascript/confirm-alert-example.png" alt="An example of a confirmation alert in JavaScript">
+    <p>Click "OK". Now, go into the console. You should see something like <code style="color:rgb(166, 0, 207)">true</code>.</p>
+    <p>If you do it again and click "Cancel", you should now see something like <code style="color:rgb(166, 0, 207)">false</code>.</p>
 </section>
