--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -23,7 +23,7 @@ alert("Hello World!")
 
 <section>
     <h2>Making a Confirmation Alert</h2>
-    <p>In JavaScript, we also have the <code>confirm()</code>. <code>confirm()</code> creates an alert box but with two buttons: OK and Cancel. If the user clicks OK, the function returns <code>true</code>. If the user clicks Cancel, the function returns <code>false</code>.</p>
+    <p>In JavaScript, we also have the <code>confirm()</code> function. <code>confirm()</code> creates an alert box but with two buttons: OK and Cancel. If the user clicks OK, the function returns <code>true</code>. If the user clicks Cancel, the function returns <code>false</code>.</p>
     <p>As an example, type the following code: </p>
     <pre><code class="language-javascript">
 console.log(confirm("Are you sure you want to do this?"))
