--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -8,13 +8,13 @@ layout: default
 
 <section>
     <h2>What is C++?</h2>
-    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other things.</p>
+    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other more useful things.</p>
     <img src="/images/programming/cpp/cpp-logo.png" alt="C++ Logo">
 </section>
 
 <section>
-    <h2>History</h2>
-    <p>C++ is older than many other programming languages, being first released in 1985. C++ was created by Bjarne Stroustrup as the successor to C.</p>
+    <h2>History</h2> was created by Bjarne Stroustrup as the successor to C.</p>
+    <p>C++ is older than many other programming languages, being first released in 1985. C++
 </section>
 
 <section>
