--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -13,7 +13,8 @@ layout: default
 </section>
 
 <section>
-    <h2>History</h2> was created by Bjarne Stroustrup as the successor to C.</p>
+    <h2>History</h2>
+    <p>C++ was created by Bjarne Stroustrup as the successor to C.</p>
     <p>C++ is older than many other programming languages, being first released in 1985. C++
 </section>
 
