--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -14,8 +14,7 @@ layout: default
 
 <section>
     <h2>History</h2>
-    <p>C++ was created by Bjarne Stroustrup as the successor to C.</p>
-    <p>C++ is older than many other programming languages, being first released in 1985. C++
+    <p>C++ was created by Bjarne Stroustrup as the successor to C. It's older than many other programming languages, being first released in 1985!</p>
 </section>
 
 <section>
