Add example console.log() image

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -25,4 +25,5 @@ layout: javascript
 console.log("Running console.log from script.js")
     </code></pre>
     <p>Now, if you go into the console, you should see something like this: </p>
+    <img src="/images/programming/javascript/console-script-js-example.png" alt="Running console.log() from script.js">
 </section>
