--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -8,13 +8,13 @@ layout: default
 
 <section>
     <h2>What is C++?</h2>
-    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other more useful things that <a href="/programming/c-lang/">C</a>.</p>
+    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other things that <a href="/programming/c-lang/">C</a> does not have.</p>
     <img src="/images/programming/cpp/cpp-logo.png" alt="C++ Logo">
 </section>
 
 <section>
     <h2>History</h2>
-    <p>C++ was created by Bjarne Stroustrup as the successor to C. It's older than many other programming languages, being first released in 1985!</p>
+    <p>C++ was created by Bjarne Stroustrup as the successor to C. C++ is quite old compared to other programming languages, being released in</p>
 </section>
 
 <section>
