--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -31,6 +31,7 @@ layout: default
 </section>
 
 <section>
-    <h2>How to Run C++</h2>
+    <h2>Running C++</h2>
     <p>C++ is a compiled language which means that C++ takes your code and turns it into an executable, which is machine code that your computer can natively understand, no compiler or interpreter needed. Then, we run the executable.</p>
+    <p>C++ has many compilers, but for this tutorial series we will be using the GCC compiler. Once we install GCC, we can use the <code>g++</code> command to compile our C++ code.</p>
 </section>
