--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -26,4 +26,14 @@ console.log("Running console.log from script.js")
     </code></pre>
     <p>Now, if you go into the console, you should see something like this: </p>
     <img src="/images/programming/javascript/console-script-js-example.png" alt="Running console.log() from script.js">
+    <p><code>console.log()</code> is useful for testing purposes.</p>
+</section>
+
+<section>
+    <h2>Making an Error in the Console</h2>
+    <p>To make an error in the console, we use the <code>console.error()</code> function. For example: </p>
+    <pre><code class="language-html">
+console.error("You did something wrong!")
+    </code></pre>
+    <p>You should see: </p>
 </section>
