--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -32,8 +32,17 @@ console.log("Running console.log from script.js")
 <section>
     <h2>Making an Error in the Console</h2>
     <p>To make an error in the console, we use the <code>console.error()</code> function. For example: </p>
-    <pre><code class="language-html">
+    <pre><code class="language-javascript">
 console.error("You did something wrong!")
     </code></pre>
-    <p>You should see: </p>
+    <p>Once you run it, you should see: </p>
+</section>
+
+<section>
+    <h2>Making a Warning in the Console</h2>
+    <p>To make a warning in the console, we use the <code>console.warn()</code> function. For example: <p>
+    <pre><code class="language-javascript">
+console.warn("You probably shouldn't do that.")
+    </code></pre>
+    <p>Once you run it. you should see: </p>
 </section>
