add console info message

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -44,5 +44,14 @@ console.error("You did something wrong!")
     <pre><code class="language-javascript">
 console.warn("You probably shouldn't do that.")
     </code></pre>
-    <p>Once you run it. you should see: </p>
+    <p>Once you run it, you should see: </p>
+</section>
+
+<section>
+    <h2>Making an Informational Console Message</h2>
+    <p>In addition to errors and warnings, we can also make informational messages using the <code>console.info()</code> function. For example: </p>
+    <pre><code class="language-javascript">
+console.info("Your response was recorded.")
+    </code></pre>
+    <p>Once you run it, you should see: </p>
 </section>
