js clear console

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -55,3 +55,8 @@ console.info("Your response was recorded.")
     </code></pre>
     <p>Once you run it, you should see: </p>
 </section>
+
+<section>
+    <h2>Clearing the Console</h2>
+    <p>When the console gets too full, we can use the <code>console.clear()</code> function to clear the console.</p>
+</section>
